<resources>
    <string name="app_name">BLEss Samples</string>
    <string name="start_scan_button_text">Start Scan</string>
    <string name="stop_scan_button_text">Stop Scan</string>
    <string name="location_permission_rationale">Location permission needed for Bluetooth scanning</string>
    <string name="permission_rationale_default">Permission required for proceeding</string>
    <string name="connect_button_text">Connect</string>
    <string name="disconnect_button_text">Disconnect</string>
    <string name="payload_edit_text_hint">Payload (Hex value)</string>
    <string name="send_message_button_text">Send message</string>
    <string name="l2ble_feature_title">L2BLE</string>
    <string name="bonding_feature">BLE Bonding</string>
    <string name="activity_main_title">BLEss Features</string>
    <string name="l2ble_scan_activity_title">L2BLE Scan</string>
    <string name="source_port_edit_text_hint">Source Port [0, 65535]</string>
    <string name="destination_port_edit_text_hint">Destination Port [0, 65535]</string>
    <string name="scan_button_text">Scan</string>
    <string name="scan_feature_title">Scan</string>
    <string name="deserialization_feature_title">Deserialization</string>
    <string name="start_bless_scan">Start Bless Scan</string>
    <string name="start_bless_scan_with_filter">Start Bless Scan with filter</string>
    <string name="start_bless_scan_with_app_theme">Start Bless Scan With App Theme</string>
    <string name="start_scan_with_custom_adapter">Start Scan With Custom Adapter</string>
    <string name="start_scan_without_ui_module">Start Scan Without Ui Module</string>
    <string name="start_scan_counter">Start Scan Counter</string>
    <string name="start_device_counter">Start Device Counter</string>
    <string name="start_scan_with_button_control">Start Scan With Button Control</string>
    <string name="timestamp_sync_button_text">Timestamp Sync</string>
    <string name="missing_permissions_warning">Missing location permissions.</string>
    <string name="scan_mode_low_latency">Low Latency</string>
    <string name="scan_mode_balanced">Balanced</string>
    <string name="scan_mode_low_power">Low Power</string>
    <string name="zero_devices_deserialized">0 devices deserialized</string>
    <string name="select_a_deserialized_device_to_see_its_parameters">Select a deserialized device to see its parameters</string>
    <string name="waiting_for_deserialized_parameters">Waiting for deserialized parameters</string>
    <string name="report_delay_ms">Report Delay (ms)</string>
    <string name="scan_mode">Scan Mode</string>
    <string name="add">Add</string>
    <string name="enter_mac_address_description">Enter mac address without \":\"</string>
    <string name="cancel">Cancel</string>
    <string name="filter_by_device">Filter by device</string>
    <string name="invalid_mac_address">Invalid mac address</string>
    <string name="delete">Delete</string>
    <string name="bluetooth_enabled">Bluetooth enabled</string>
    <string name="bluetooth_disabled">Bluetooth disabled</string>
</resources>