<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".scan.ScanStarterActivity">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/start_bless_scan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/start_bless_scan" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/start_bless_scan_with_filter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/start_bless_scan_with_filter" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/start_bless_scan_with_app_theme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/start_bless_scan_with_app_theme" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/start_scan_with_custom_adapter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/start_scan_with_custom_adapter" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/start_scan_with_button_control"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/start_scan_with_button_control" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/start_device_counter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/start_device_counter" />
    </LinearLayout>
</ScrollView>