<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <TextView
            android:id="@+id/filter_by_mac_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/filter_by_device"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/mac_address_input_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_mac_address_description"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/filter_by_mac_text_view" />

        <Button
            android:id="@+id/add_mac_filter_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            app:layout_constraintBottom_toBottomOf="@id/mac_address_input_edit_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="@+id/mac_address_input_edit_text" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/filter_by_mac_address_list_view"
            android:layout_width="0dp"
            android:minHeight="@dimen/recycler_view_in_filter_dialog_min_height"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mac_address_input_edit_text" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/report_delay_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/report_delay_ms"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/filter_by_mac_address_list_view" />

        <TextView
            android:id="@+id/scan_mode_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/scan_mode"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/report_delay_edit_text" />

        <RadioGroup
            android:id="@+id/scan_mode_options_radio_group"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/scan_mode_text_view">

            <RadioButton
                android:id="@+id/low_power_scan_mode_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scan_mode_low_power" />

            <RadioButton
                android:id="@+id/balanced_scan_mode_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/scan_mode_balanced" />

            <RadioButton
                android:id="@+id/low_latency_scan_mode_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scan_mode_low_latency" />

        </RadioGroup>

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            app:layout_constraintEnd_toStartOf="@+id/start_scan_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/scan_mode_options_radio_group" />

        <Button
            android:id="@+id/start_scan_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/start_scan_button_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cancel_button"
            app:layout_constraintTop_toBottomOf="@id/scan_mode_options_radio_group" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.75" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>