<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:elevation="@dimen/appbar_elevation"
            android:minHeight="?attr/actionBarSize">

            <TextView
                android:id="@+id/no_device_deserialized_text_view"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="@dimen/screen_edge_margin"
                android:gravity="center_vertical"
                android:text="@string/zero_devices_deserialized"
                android:textColor="@color/text_on_primary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/button_barrier"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/devices_spinner"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="@dimen/screen_edge_margin"
                android:backgroundTint="@color/text_on_primary"
                android:foregroundTint="@color/text_on_white"
                android:gravity="center_vertical"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/button_barrier"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:listitem="@layout/item_device_appbar_spinner" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/button_barrier"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:barrierDirection="start"
                app:constraint_referenced_ids="scan_start_button,scan_stop_button" />

            <Button
                android:id="@+id/scan_start_button"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/screen_edge_margin"
                android:text="@string/start_scan_button_text"
                android:textColor="@color/text_on_primary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/scan_stop_button"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/screen_edge_margin"
                android:text="@string/stop_scan_button_text"
                android:textColor="@color/text_on_primary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/deserialization_data_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_deserialization_data" />

    </LinearLayout>

    <TextView
        android:id="@+id/no_device_selected_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/select_a_deserialized_device_to_see_its_parameters" />
    <TextView
        android:visibility="invisible"
        android:id="@+id/no_parameters_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/waiting_for_deserialized_parameters" />
</FrameLayout>