<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:ignore="HardcodedText">

    <TextView
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:elevation="@dimen/appbar_elevation"
        android:gravity="center_vertical|start"
        android:minHeight="?attr/actionBarSize"
        android:paddingStart="@dimen/screen_edge_margin"
        android:paddingEnd="@dimen/screen_edge_margin"
        android:text="@string/activity_main_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
        android:textColor="@color/text_on_primary" />

    <TextView
        android:id="@+id/scan_feature"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/content_vertical_margin"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:gravity="start|center_vertical"
        android:minHeight="@dimen/list_item_height_single_line"
        android:paddingStart="@dimen/screen_edge_margin"
        android:paddingEnd="@dimen/screen_edge_margin"
        android:text="@string/scan_feature_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/text_on_white" />

    <TextView
        android:id="@+id/deserialization_feature"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:gravity="start|center_vertical"
        android:minHeight="@dimen/list_item_height_single_line"
        android:paddingStart="@dimen/screen_edge_margin"
        android:paddingEnd="@dimen/screen_edge_margin"
        android:text="@string/deserialization_feature_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/text_on_white" />

    <TextView
        android:id="@+id/scan_service_feature"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:gravity="start|center_vertical"
        android:minHeight="@dimen/list_item_height_single_line"
        android:paddingStart="@dimen/screen_edge_margin"
        android:paddingEnd="@dimen/screen_edge_margin"
        android:text="Scan Service"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/text_on_white" />

    <TextView
        android:id="@+id/bonding_feature"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:gravity="start|center_vertical"
        android:minHeight="@dimen/list_item_height_single_line"
        android:paddingStart="@dimen/screen_edge_margin"
        android:paddingEnd="@dimen/screen_edge_margin"
        android:text="@string/bonding_feature"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/text_on_white" />

    <TextView
        android:id="@+id/connect_service_feature"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:gravity="start|center_vertical"
        android:minHeight="@dimen/list_item_height_single_line"
        android:paddingStart="@dimen/screen_edge_margin"
        android:paddingEnd="@dimen/screen_edge_margin"
        android:text="Connect Service"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/text_on_white" />
</LinearLayout>